apps/vert/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: vert
  namespace: vert

spec:
  selector:
    app: vert
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
