apps/vert/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: vert
  namespace: vert
  annotations:
    item.homer.rajsingh.info/name: "Vert"
    item.homer.rajsingh.info/subtitle: "File Converter"
    item.homer.rajsingh.info/logo: "https://cdn.jsdelivr.net/gh/selfhst/icons@main/webp/vert.webp"
    service.homer.rajsingh.info/name: "Tools"
    service.homer.rajsingh.info/icon: "fas fa-screwdriver-wrench"

spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "vert.prosto.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vert
          port: 80
