apps/vert/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: vert
  namespace: vert
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m

spec:
  ingressClassName: nginx
  rules:
    - host: vert.prosto.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vert
                port:
                  number: 80
